--- a/CSS/flex.css
+++ b/CSS/flex.css
@@ -14,30 +14,28 @@ body{
 }
 
 .auto{
-    width: 740px;
-    height: 540px;
+    flex-basis: 740px;
+    height: 100%;
     background-image: url(../IMG/Layer8.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 5px;
 }
 
 .girl{
     background-color: white;
-    max-width: 360px;
+    flex-basis: 360px;
     height: 100%;
+    margin: 5px;
 }
 
 .girlfoto{
-    width: 360px;
+    max-width: 360px;
 }
 .vverx{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
-}
-
-.niz{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
 }
 
 .load{
@@ -79,7 +77,8 @@ body{
     color: #ffffff;
     text-transform: uppercase;
     margin-top: 10px;
-    width: 378px;
+    max-width: 378px;
+    padding-bottom: 56px ;
 }
 
 .autotext{
