--- a/CSS/flex.css
+++ b/CSS/flex.css
@@ -118,7 +118,9 @@ body{
 
 @media screen and (max-width: 765px){
     .auto{
-        max-width: 360px;
+        transform: scale(0.5);
+        margin-bottom: -134px;
+    
     }
 }
 
